finally manage to fix the gap problem on the right side of the page. It was a padding error on the th and td of the table

--- a/DCHome/FriendsAwards.css
+++ b/DCHome/FriendsAwards.css
@@ -79,7 +79,6 @@
 }
 
 .hero-content {
-    /* position: relative; */
     bottom: 280px;
     width: 100%;
     padding: 40px;
@@ -110,24 +109,9 @@ nav li {
 
 .logo {
     margin-top: 5px;
-    margin-bottom: 0pxs;
+    margin-bottom: 0;
     padding: 0;
 }
-
-/* .casts {
-    margin-left: 870px;
-    margin-right: 100px;
-}
-
-.videos {
-    margin-left: 100px;
-    margin-right: 100px;
-}
-
-.awards {
-    margin-left: 100px;
-    margin-right: 80px;
-}  */
 
 #dot1 {
     color: rgb(254, 9, 9);
@@ -139,7 +123,6 @@ nav li {
     color:  rgb(0, 217, 255);
     font-family: helvetica;
     font-size: large;
-
 }
 
 nav a {
@@ -187,9 +170,7 @@ body {
 table {
     font-family: helvetica, sans-serif, 'times new roman';
     text-align: center;
-    border-collapse: collapse;
     border-spacing: 0;
-    width: 100%;
 }
 
 thead {
@@ -200,13 +181,13 @@ th {
     font-family: "Covered By Your Grace", cursive;
     font-weight: 400;
     font-style: normal;
-    font-size: 1.5em;
+    font-size: 20px;
     text-align: center;
-
 }
 
 th, td {
-    padding: 8px;
+    padding-top: 8px;
+    padding-bottom: 8px;
     text-align: center;
     border-bottom: 1px solid #000000;
 }
@@ -217,6 +198,7 @@ tbody tr:hover {
 /* End of Table */
 
 .img {
+    margin: 0;
     display: flex;
     justify-content: center;
 }
